--- a/style/story.css
+++ b/style/story.css
@@ -133,10 +133,7 @@ table {
 *::after {
   box-sizing: border-box;
 }
-body {
-  margin: 0;
-  padding: 0;
-}
+
 .container-1{
   max-width: 100%;
   height: 80px;
@@ -155,13 +152,18 @@ body {
   line-height: 1.2;
   position: relative;
 }
-nav li img{
-  height: 46px;
-  width: 129px;
-  margin: 0 0px ;
+header h1 a{
+  background-image:url(../img/logo.svg);
+  width: 105px; 
+  height: 30px;
+  display: block;
+  text-indent: 101%;
+  overflow: hidden;
+  white-space: nowrap;
 }
 
-.header h1 {
+
+.header h2 {
   display: inline;
   font-size: 40px;
   position: absolute;
@@ -201,8 +203,8 @@ nav li img{
 .row{
     display: flex;
     flex-wrap: wrap;
-    margin-right: -12px;
-    margin-left: -12px;
+    margin-right: 0px;
+    margin-left: 0px;
 }
 .slogan {
   border-radius: 10px;
@@ -230,11 +232,11 @@ h5 {
   letter-spacing: 5%;
 }
 
-img {
-  width: 1076px;
-  height: 717px;
-  margin-bottom: 24px;
-  margin-left: -180px;
+img { max-width:100%; height:auto; display:block; margin: 0 auto 24px; }
+@media (min-width: 1200px){
+  .about-img{
+    transform: translateX(-180px);   /* 視覺位移，不改版面寬度 */
+  }
 }
 @media(max-width:767px){
   img {
@@ -410,7 +412,7 @@ a:hover {
     background-color: #212529;
     color: white;
 }
-footer img{
+.footer img{
    height: 46px;
   width: 129px;
   margin: 0 0px ;
